fix: home hero image carousel object-cover, not fit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -655,6 +655,10 @@ h4, .h4 {
   right: 10%;
 }
 
+.right-\[20px\] {
+  right: 20px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -987,6 +991,11 @@ h4, .h4 {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .bg-\[\#ffffffcc\] {
